--- a/src/global.scss
+++ b/src/global.scss
@@ -1,1 +1,6 @@
-$color-primary: khaki;
+$color-primary: #f3615e;
+$color-secondary: #db5755;
+$color-tertiary: #feefef;
+
+$text-color-primary: #333;
+$text-color-secodary: #555;
