--- a/src/App.scss
+++ b/src/App.scss
@@ -4,10 +4,10 @@
 
   .sections {
     width: 100%;
-    height: calc(100vh - 7rem);
+    // height: calc(100vh - 7rem);
     background-color: tomato;
     position: relative;
-    top: 7rem;
+    top: 0;
     scroll-behavior: smooth;
     // scroll-snap-type: y mandatory;
     // scrollbar-width: none;
@@ -16,7 +16,7 @@
     //}
     > * {
       width: 100vw;
-      height: calc(100vh - 7rem);
+      height: calc(100vh);
       // scroll-snap-align: start;
     }
   }
