--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,76 @@
+@import "../../global.scss";
 .header {
   background-color: teal;
+  background-image: url("../../../public/assets/imgs/career.jpeg");
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  .hero {
+    margin-left: 12rem;
+    margin-bottom: 16rem;
+    color: $text-color-primary;
+    h1 {
+      font-size: 4rem;
+      line-height: 4rem;
+      letter-spacing: -0.1rem;
+      margin-bottom: 1rem;
+
+      span {
+        color: $color-primary;
+      }
+    }
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      color: $text-color-secodary;
+    }
+
+    .btn,
+    .btn:link,
+    btn:visited {
+      display: inline-block;
+      text-decoration: none;
+      font-size: 2rem;
+      font-weight: 600;
+      padding: 1.2rem 2rem;
+      border-radius: 6px;
+
+      border: none;
+      cursor: pointer;
+      font-family: inherit;
+      transition: all 0.3s;
+    }
+
+    .btn--full:link,
+    .btn--full:visited {
+      background-color: $color-primary;
+      color: #fff;
+      margin-right: 1rem;
+      margin-top: 1rem;
+      margin-left: -2rem
+    }
+
+    .btn--full:hover,
+    .btn--full:active {
+      background-color: $color-secondary;
+    }
+
+    .btn--outline:link,
+    .btn--outline:visited {
+      background-color: #fff;
+      color: #555;
+    
+    }
+
+    .btn--outline:hover,
+    .btn--outline:active {
+      background-color: #fff;
+
+      /* border: 3px solid #fff; */
+
+     
+      box-shadow: inset 0 0 0 3px $color-tertiary;
+    }
+  }
 }
