about section  added

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   .sections {
     width: 100%;
     // height: calc(100vh - 7rem);
-    background-color: tomato;
+    background-color: none;
     position: relative;
     top: 0;
     scroll-behavior: smooth;
