--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,3 +1,45 @@
+@import "../../global.scss";
 .about {
-  background-color: aquamarine;
+  background-color: #dce8ece0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .container {
+    width: 60rem;
+    height: 20rem;
+    background-color: #a7b4b488;
+    padding: 3rem 5rem;
+    border-radius: 8px;
+    position: relative;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+
+    display: flex;
+    align-items: center;
+
+    gap: 8rem;
+    img {
+      height: 22rem;
+      border-radius: 8px;
+      transform: scale(1.1);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+    }
+
+    .text {
+      h4 {
+        color: #444;
+        font-size: 2rem;
+        margin-bottom: 1rem;
+        border-left: 0.5rem solid $color-primary;
+        padding-left: 0.5rem;
+        display: inline-block;
+      }
+      p {
+        font-size: 1.4rem;
+        line-height: 1.1;
+        color: #444;
+        font-weight: 600;
+      }
+    }
+  }
 }
