--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,6 +8,8 @@
   top: 0;
   z-index: 3;
   transition: all 1s ease;
+  margin-top: 1rem;
+  margin-right: 5rem;
 
   .wrapper {
     margin-top: 1rem;
