--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,7 @@
 $color-primary: #f3615e;
 $color-secondary: #db5755;
-$color-tertiary: #feefef;
+$color-tertiary: #a7b4b488;
 
 $text-color-primary: #333;
 $text-color-secodary: #555;
+$shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
