--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,6 @@
   scroll-behavior: smooth;
 }
 .app .sections > * {
-  width: 100vw;
-  height: 100vh;
-}/*# sourceMappingURL=App.css.map */
+  max-width: 100vw;
+  max-height: 100vh;
+} /*# sourceMappingURL=App.css.map */
