--- a/src/components/skills/Skills.module.scss
+++ b/src/components/skills/Skills.module.scss
@@ -1,10 +1,11 @@
 @import "../../global.scss";
 .skills {
-  background-color: yellow;
+  background-color: #fff;
   background-image: linear-gradient(to right, rgb(243, 243, 243));
   padding: 2rem;
   box-sizing: border-box;
   // overflow: hidden;
+  height: auto !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -91,6 +92,7 @@
       img {
         font-size: 2rem;
         max-width: 3rem;
+
         // background-color: yellow;
       }
     }
