contact and footer added

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   padding: 4rem;
+  // height: auto !important;
 
   .container {
     width: 70rem;
