--- a/src/global.scss
+++ b/src/global.scss
@@ -6,6 +6,7 @@ $color-background-light: rgb(243, 243, 243);
 
 $text-color-primary: #333;
 $text-color-secodary: #555;
+$text-color-form: rgb(200, 192, 192);
 $shadow: 0 12px 24px rgba(0, 0, 0, 0.28);
 
 @mixin btn {
