--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: $text-color-form;
 
     font-size: 2rem;
     padding: 2rem;
